--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-    <title>Neu Profile - Single page website</title>
+    <title>OurProfile</title>
     <meta name="description" content="">
     <meta name="author" content="WebThemez">
     <!--[if lt IE 9]>
@@ -42,7 +42,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand scroll-top logo"><b>Neu Profile</b></a>
+                    <a href="#" class="navbar-brand scroll-top logo"><b>Neville </b></a>
                 </div>
                 <!--/.navbar-header-->
                 <div id="main-nav" class="collapse navbar-collapse">
@@ -65,7 +65,7 @@
     <div id="#top"></div>
     <section id="home">
         <div class="banner-container">
-            <img src="images/banner-bg.jpg" alt="banner" />
+            <img src="images/IMG_20180901_134155.jpg" opacity="0.7" height="550" alt="banner" />
             <div class="container banner-content">
                 <div id="da-slider" class="da-slider">
                     <div class="da-slide">
@@ -110,7 +110,7 @@
         <div class="container">
             <div class="heading text-center">
                 <!-- Heading -->
-                <h2>I am Sam, a UI Designer & developer</h2>
+                <h2>I am Neville, a UI Designer & developer</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
             </div>
             <div class="row">
